BAVL-379: Convert feature toggles to secrets (#740)
* BAVL-379: Convert feature toggles to secrets

* rename-legacy-bvls-toggle

* wip

--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -36,9 +36,6 @@ generic-service:
     APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=$(APPINSIGHTS_INSTRUMENTATIONKEY)"
     APPLICATIONINSIGHTS_CONFIGURATION_FILE: applicationinsights.json
     HMPPS_SQS_USE_WEB_TOKEN: "true"
-    FEATURE_BVLS_ENABLED: "true"
-    FEATURE_EVENTS_SNS_ENABLED: false
-    FEATURE_EVENT_WHEREABOUTS_API_VIDEOLINK_MIGRATE: true
 
   namespace_secrets:
     whereabouts-api:
@@ -46,6 +43,9 @@ generic-service:
       OAUTH_CLIENT_ID: "OAUTH_CLIENT_ID"
       OAUTH_CLIENT_SECRET: "OAUTH_CLIENT_SECRET"
       NOTIFY_API_KEY: "NOTIFY_API_KEY"
+    feature-toggles:
+      FEATURE_LISTEN_FOR_COURT_EVENTS: "FEATURE_LISTEN_FOR_COURT_EVENTS"
+      FEATURE_EVENT_WHEREABOUTS_API_VIDEOLINK_MIGRATE: "FEATURE_SEND_VIDEO_BOOKING_MIGRATE_EVENTS"
     dps-rds-instance-output:
       DATABASE_USERNAME: "database_username"
       DATABASE_PASSWORD: "database_password"
