BAVL-476 remove SNS subcription to domain events for BVLS code.

--- a/src/main/resources/application-localstack.yml
+++ b/src/main/resources/application-localstack.yml
@@ -6,20 +6,7 @@ hmpps.sqs:
       dlqName: ${random.uuid}
       subscribeTopicId: prisonerevents
       subscribeFilter: >-
-        {"eventType": [
-          "DATA_COMPLIANCE_DELETE-OFFENDER",
-          "APPOINTMENT_CHANGED"
-        ]}
-    domainevent:
-      queueName: ${random.uuid}
-      dlqName: ${random.uuid}
-      subscribeTopicId: domainevents
-      subscribeFilter: >-
-        {"eventType": [
-          "prison-offender-events.prisoner.released"
-        ]}
+        {"eventType": ["DATA_COMPLIANCE_DELETE-OFFENDER"]}
   topics:
-    domainevents:
-      arn: arn:aws:sns:eu-west-2:000000000000:${random.uuid}
     prisonerevents:
       arn: arn:aws:sns:eu-west-2:000000000000:${random.uuid}
