--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -14,3 +14,6 @@ generic-service:
   allowlist:
     groups:
       - internal
+
+generic-prometheus-alerts:
+  alertSeverity: digital-prison-service-dev
