--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -12,7 +12,7 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
 
   prison-api:
-    image: ghcr.io/ministryofjustice/prison-api:latest
+    image: quay.io/hmpps/prison-api:latest
     networks:
       - hmpps
     depends_on:
