SAA-3767: Disable whereabouts for Styal

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -12,7 +12,7 @@ generic-service:
     OAUTH_ENDPOINT_URL: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth"
     CASENOTES_ENDPOINT_URL: "https://preprod.offender-case-notes.service.justice.gov.uk"
     SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
-    WHEREABOUTS_DISABLED: RSI,WDI,LPI,FMI,IWI,WMI,GTI,FKI,LTI,BCI,FNI,MTI,LEI,FSI,DMI,HII,WII,RCI,RNI,MDI,LFI,LHI,EYI,PDI,SLI,SNI,BXI,NMI,PVI,WEI,WSI,VEI,BLI,HOI,PNI,CFI,DWI,LCI,ISI,HEI,MHI,AYI,BRI,BSI,BAI,BNI,WLI,WHI,WTI,CLI,MRI,ONI,LII,GHI,SFI,SKI,SHI,WCI,EXI,HCI,EEI,MSI,HLI,BFI,EWI,HMI,LLI,GMI,HBI,DTI,WWI,HHI,LWI,CWI,SDI,BWI,NWI,FHI,WRI,DHI,NHI
+    WHEREABOUTS_DISABLED: RSI,WDI,LPI,FMI,IWI,WMI,GTI,FKI,LTI,BCI,FNI,MTI,LEI,FSI,DMI,HII,WII,RCI,RNI,MDI,LFI,LHI,EYI,PDI,SLI,SNI,BXI,NMI,PVI,WEI,WSI,VEI,BLI,HOI,PNI,CFI,DWI,LCI,ISI,HEI,MHI,AYI,BRI,BSI,BAI,BNI,WLI,WHI,WTI,CLI,MRI,ONI,LII,GHI,SFI,SKI,SHI,WCI,EXI,HCI,EEI,MSI,HLI,BFI,EWI,HMI,LLI,GMI,HBI,DTI,WWI,HHI,LWI,CWI,SDI,BWI,NWI,FHI,WRI,DHI,NHI,STI
 
 
 generic-prometheus-alerts:
